--- a/app/HandsUp/Base.lproj/Main.storyboard
+++ b/app/HandsUp/Base.lproj/Main.storyboard
@@ -130,7 +130,7 @@
                                         <connections>
                                             <action selector="joinClassButton:" destination="PHJ-yN-pzf" eventType="touchUpInside" id="hvP-rq-wvU"/>
                                             <action selector="sessionButtonTapped:" destination="uFR-xI-vKY" eventType="touchUpInside" id="IwN-5f-TnE"/>
-                                            <segue destination="ETB-3G-TTN" kind="show" identifier="recordSegue" id="iXH-cL-QoJ"/>
+                                            <segue destination="ETB-3G-TTN" kind="presentation" identifier="recordSegue" id="iXH-cL-QoJ"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -263,14 +263,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Press the button below to start recording. Anything you say will appear here." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zyZ-PZ-P6d">
-                                <rect key="frame" x="68" y="298" width="279" height="221"/>
+                                <rect key="frame" x="68" y="202" width="279" height="366"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="57" translatesAutoresizingMaskIntoConstraints="NO" id="WAW-er-eYi">
-                                <rect key="frame" x="103" y="527" width="209" height="123"/>
+                                <rect key="frame" x="103" y="576" width="209" height="123"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="FhY-Ge-z4W">
                                         <rect key="frame" x="19.5" y="0.0" width="170" height="32"/>
@@ -318,11 +318,23 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KQe-Dp-1ng">
+                                <rect key="frame" x="20" y="113" width="112" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Leave Session"/>
+                                <connections>
+                                    <action selector="leaveButtonTapped:" destination="ETB-3G-TTN" eventType="touchUpInside" id="4Nl-80-xwv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="zyZ-PZ-P6d" firstAttribute="top" secondItem="KQe-Dp-1ng" secondAttribute="bottom" constant="59" id="GyI-PF-cx5"/>
+                            <constraint firstItem="9JT-bb-pXV" firstAttribute="trailing" secondItem="KQe-Dp-1ng" secondAttribute="trailing" constant="282" id="J9x-dk-wMX"/>
                             <constraint firstItem="zyZ-PZ-P6d" firstAttribute="leading" secondItem="9JT-bb-pXV" secondAttribute="leading" constant="68" id="JA8-rQ-lxY"/>
                             <constraint firstItem="9JT-bb-pXV" firstAttribute="bottom" secondItem="WAW-er-eYi" secondAttribute="bottom" constant="163" id="K7o-8m-Lke"/>
+                            <constraint firstItem="KQe-Dp-1ng" firstAttribute="leading" secondItem="9JT-bb-pXV" secondAttribute="leading" constant="20" id="Ms2-fL-w2T"/>
                             <constraint firstItem="WAW-er-eYi" firstAttribute="top" secondItem="zyZ-PZ-P6d" secondAttribute="bottom" constant="8" id="nST-87-GIn"/>
                             <constraint firstItem="zyZ-PZ-P6d" firstAttribute="top" secondItem="9JT-bb-pXV" secondAttribute="top" constant="158" id="p4L-9B-XOR"/>
                             <constraint firstItem="9JT-bb-pXV" firstAttribute="trailing" secondItem="zyZ-PZ-P6d" secondAttribute="trailing" constant="67" id="r88-yV-cPf"/>
@@ -334,6 +346,7 @@
                     <navigationItem key="navigationItem" title="Record" id="aey-Ti-SCE"/>
                     <connections>
                         <outlet property="cancelButton" destination="HfB-Xd-tom" id="ara-4D-4ie"/>
+                        <outlet property="leaveButton" destination="KQe-Dp-1ng" id="2KZ-o4-A6g"/>
                         <outlet property="questionAnswerView" destination="zyZ-PZ-P6d" id="cC3-nZ-F5h"/>
                         <outlet property="recordButton" destination="C78-NU-56z" id="frR-Gd-N4m"/>
                         <outlet property="submitButton" destination="akh-dZ-zrg" id="xfk-y7-oGh"/>
@@ -341,7 +354,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Qa-LA-rWx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3742" y="98"/>
+            <point key="canvasLocation" x="3740.579710144928" y="97.767857142857139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="twu-LH-i5s">
